--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,20 +32,13 @@
             android:label="Scan your bill" />
         <activity
             android:name=".DetailsActivity"
-            android:label="@string/title_activity_details">
-
-        </activity>
+            android:label="@string/title_activity_details"></activity>
         <activity
             android:name=".ContentViewActivity"
             android:label="@string/title_activity_content_view" />
         <activity
             android:name=".HomeActivity"
             android:label="@string/title_activity_home">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-
         </activity>
 
         <receiver android:name="Notification.AlarmBroadcastReceiver">
@@ -54,6 +47,12 @@
             </intent-filter>
         </receiver>
 
+        <activity android:name=".TabActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
