--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:fullBackupContent="false"
         android:hardwareAccelerated="true"
         android:icon="@drawable/billremind"
-        android:label="BillTracker"
+        android:label="Payment Reminder"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat">
         <meta-data
