Changed package name

--- a/local.properties
+++ b/local.properties
@@ -6,3 +6,4 @@
 # header note.
 #Thu Oct 04 01:37:13 NZDT 2018
 sdk.dir=Z\:\\Android_SDK\\Android\\Sdk
+#sdk.dir=C\:\\Users\\GPow\\AppData\\Local\\Android\\Sdk
