--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion '27.0.3'
 
     defaultConfig {
-        applicationId "com.google.android.gms.samples.vision.ocrreader"
+        applicationId "com.rahul.android.payment"
         minSdkVersion 26
         targetSdkVersion 27
         versionCode 1
