Spinner issue fixed

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,9 +44,9 @@
             </intent-filter>
         </receiver>
 
-        <activity android:name=".TabActivity">
+        <activity android:name=".TabActivity"
+            android:exported="true" />
 
-        </activity>
         <activity android:name=".ReportActivity" />
         <activity
             android:name=".EditDetails"
