--- a/local.properties
+++ b/local.properties
@@ -5,5 +5,5 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Thu Oct 04 01:37:13 NZDT 2018
-sdk.dir=Z\:\\Android_SDK\\Android\\Sdk
-#sdk.dir=C\:\\Users\\GPow\\AppData\\Local\\Android\\Sdk
+#sdk.dir=Z\:\\Android_SDK\\Android\\Sdk
+sdk.dir=C\:\\Users\\GPow\\AppData\\Local\\Android\\Sdk
